@@ -79,7 +79,7 @@ case "${1}" in
 
       log_info_msg "Checking file systems..."
       # Note: -a option used to be -p; but this fails e.g. on fsck.minix
-      fsck ${options} -a -A -C -T
+      fsck ${options} -a -A -C -T >/dev/null
       error_value=${?}
 
       if [ "${error_value}" = 0 ]; then
